--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 		
 		<h2>All About Me</h2>
 		<ul>
-			Family
-			Skills
-			Hobbies
-			Programs/Awards
-			Interests
+			<li>Family</li>
+			<li>Skills</li>
+			<li>Hobbies</li>
+			<li>Programs/Awards</li>
+			<li>Interests</li>
 		</ul>
 		
 		<h2>My Family</h2>
