--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 		<h1>About Jenna!</h1>
 		
 		<h2>All About Me</h2>
-		<ul>
-			<li>Family</li>
-			<li>Skills</li>
-			<li>Hobbies</li>
-			<li>Programs/Awards</li>
-			<li>Interests</li>
-		</ul>
+		
+			Family<br>
+			Skills<br>
+			Hobbies<br>
+			Programs/Awards<br>
+			Interests<br>
+
 		
 		<h2>My Family</h2>
 			<p>I come from a large family. I have 1 sister, 2 parents, 3 uncles, 1 aunt, and 9 first cousins. When I was six my parents got divorced but they shared custody half time and half time so I was able to see them equally. It was hard for them to raise my sister and I as single parents but they managed to get through it. The good thing is that they still get along good and they do not argue as much.</p>
