--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	<body>
 		<header>
 			<h1>Other Links</h1>
-				<ul>
-					<li><a href="atm.html">ATM</a></li>
-					<li><a href="future.html">My Future</a></li>
-				</ul>
+				
+					<a href="atm.html">ATM</a><br>
+					<a href="future.html">My Future</a><br>
+				
 		</header>
 		<h1>About Jenna!</h1>
 		
