--- a/atm.html
+++ b/atm.html
@@ -7,31 +7,31 @@
 <body>
 
 <h2>What I learned in 6th grade</h2>
-			<ol>
-				<li>Coding Art</li>
-				<li>Internet Safty</li>
-				<li>Word Processor</li>
-				<li>Tagxedo</li>
-			</ol>
+		
+				Coding Art<br>
+				Internet Safty<br>
+				Word Processor<br>
+				Tagxedo<br>
+			
 			<img src="images/Typing Test.jpg" alt="Typing Certificate" width="400">
 			<h2>What I learned in 7th grade</h2>
-				<ol>
-					<li>Floorplanner</li>
-					<li>SketchUp</li>
-					<li>Photoshop</li>
-					<li>Illustrator</li>
-				</ol>
+				
+					Floorplanner<br>
+					SketchUp<br>
+					Photoshop<br>
+					Illustrator<br>
+				
 			<img src="images/pizza.jpg" alt="Pizza" width="400">
 			<h2>What I learned in 8th Grade</h2>
-				<ol>
-					<li>Coding</li>
-					<li>Kahn Academy</li>
-					<li>Dash</li>
-					<li>Storyboard</li>
-				</ol>
+			
+					Coding<br>
+					Kahn Academy<br>
+					Dash<br>
+					Storyboard<br>
+			
 			<img src="images/Storyboard.jpg" alt="Storyboard" width="400">
 	
 	<h2>Reflection</h2>
 	<p> I have been in ATM for all of middle school. I am very happy that I picked this program because if I did not, I would not know how to make my own website or know how to do anything with technology that I know now.</p>
-		</head>
+		
 </body>
