--- a/future.html
+++ b/future.html
@@ -8,12 +8,12 @@
 		<h1>What Will My Future Be Like?</h1>
 		
 		<h2>My Future</h2>
-		<ul>
-			<li>High School</li>
-			<li>College</li>
-			<li>Career Interests</li>
-			<li>Goals</li>
-		</ul>
+		
+			High School<br>
+			College<br>
+			Career Interests<br>
+			Goals<br>
+		
 		<h2>High School</h2>
 			<p> I am going to Lakewood High School. Ever since I was in 6th grade I always wanted to go to Lakewood. Once I visited Lakewood for a day I was for sure on going to Lakewood High School.</p>
 			<img src="images/graduation.jpg" alt="High School Graduation" width="400">
