--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	<body>
 		<header>
 			<h1>Other Links</h1>
-				
-					<a class="links" href="atm.html">ATM</a><br>
-					<a class="links" href="future.html">My Future</a><br>
-				
+				<ul class="cheer">
+				<li class="links"><a href="atm.html">ATM</a></li>
+				<li class="links"><a href="future.html">My Future</a></li>
+		</ul>
 		</header>
 		<h1>About Jenna!</h1>
 		
