--- a/atm.html
+++ b/atm.html
@@ -21,7 +21,7 @@
 					Photoshop<br>
 					Illustrator<br>
 				
-			<img src="images/pizza.jpg" alt="Pizza" width="400">
+			<img src="images/city.jpg" alt="Poster" width="400">
 			<h2>What I learned in 8th Grade</h2>
 			
 					Coding<br>
