--- a/future.html
+++ b/future.html
@@ -5,6 +5,15 @@
 			<link rel="stylesheet" type="text/css" href="mystyle.css">
 	</head>
 	<body>
+		<header>
+			<h2>Other Links</h2>
+				<ul class="cheer">
+				<li class="links"><a href="home.html">Home</a><li>
+				<li class="links"><a href="atm.html">ATM</a></li>
+				<li class="links"><a href="future.html">My Future</a></li>
+				
+		</ul>
+		</header>
 		<h1>What Will My Future Be Like?</h1>
 		
 		<h2>My Future</h2>
