--- a/atm.html
+++ b/atm.html
@@ -5,7 +5,15 @@
 			<link rel="stylesheet" type="text/css" href="mystyle.css">
 	</head>
 <body>
-
+<header>
+			<h2>Other Links</h2>
+				<ul class="cheer">
+				<li class="links"><a href="home.html">Home</a><li>
+				<li class="links"><a href="atm.html">ATM</a></li>
+				<li class="links"><a href="future.html">My Future</a></li>
+				
+		</ul>
+		</header>
 <h2>What I learned in 6th grade</h2>
 		
 				Coding Art<br>
