--- a/atm.html
+++ b/atm.html
@@ -8,7 +8,7 @@
 <header>
 			<h2>Other Links</h2>
 				<ul class="cheer">
-				<li class="links"><a href="home.html">Home</a><li>
+				<li class="links"><a href="index.html">Home</a><li>
 				<li class="links"><a href="atm.html">ATM</a></li>
 				<li class="links"><a href="future.html">My Future</a></li>
 				
