--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		
 		<h2>My Family</h2>
 			<p>I come from a large family. I have 1 sister, 2 parents, 3 uncles, 1 aunt, and 9 first cousins. When I was six my parents got divorced but they shared custody half time and half time so I was able to see them equally. It was hard for them to raise my sister and I as single parents but they managed to get through it. The good thing is that they still get along good and they do not argue as much.</p>
-			<img src="images/family.jpg" alt="Family" width="400">
+			<img src="https://lh3.google.com/u/0/d/0B-s15ukcfQbYM01uVk9SekRZZ1E=w1008-h961-iv1" alt="Family" width="400">
 		    
 			<h2>My Skills</h2>
 			<p> I am a long distance runner and a cheerleader. </p>
