--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		
 		<h2>My Interests</h2>
 			<p>I am interested in the youtubers know by The Dolan Twins and Jaclyn Hill.</p>
-			<img src="images/youtube.jpg" alt="Youtube Symbol" width="400">
+			<img src="https://lh3.google.com/u/0/d/0B-s15ukcfQbYR2w2WURON0czUnc=w1008-h961-iv1" alt="Youtube Symbol" width="400">
 		
 		<h2>My Programs and Awards</h2>
 			<p> In 6th grade I was in Green Team. In 7th grade I was in Genius Bar. I am on the Honor Role at my school. I am also a cheerleader at my school. I was on it in 7th grade and I am on it in 8th grade as a captain.</p>
