--- a/atm.html
+++ b/atm.html
@@ -37,7 +37,7 @@
 					Dash<br>
 					Storyboard<br>
 			
-			<img src="images/Storyboard.jpg" alt="Storyboard" width="400">
+			<img src="https://lh3.google.com/u/0/d/0B-s15ukcfQbYWWZ3bTdXejNqOEk=w1008-h961-iv1" alt="Storyboard" width="400">
 	
 	<h2>Reflection</h2>
 	<p> I have been in ATM for all of middle school. I am very happy that I picked this program because if I did not, I would not know how to make my own website or know how to do anything with technology that I know now.</p>
