--- a/future.html
+++ b/future.html
@@ -25,7 +25,7 @@
 		
 		<h2>High School</h2>
 			<p> I am going to Lakewood High School. Ever since I was in 6th grade I always wanted to go to Lakewood. Once I visited Lakewood for a day I was for sure on going to Lakewood High School.</p>
-			<img src="images/graduation.jpg" alt="High School Graduation" width="400">
+			<img src="https://lh3.google.com/u/0/d/0B-s15ukcfQbYVmhfVW4yRDIxSHM=w1008-h961-iv1" alt="High School Graduation" width="400">
 		    <h2>College</h2>
 			<p> My dream college has always been UCLA. If I don't go there I would want to go to Long Beach State.</p>
 			<img src="images/College.jpg" alt="College Class" width="400">
